Add "3gp" to the list of video file extensions, so we detect these files

	* src/gpodder/util.py: Add the .3gp video file extension to the list
	of known video file extensions, so we can detect that these are video
	files and act accordingly (in the UI and on sync); thanks to Atte
	André Jensen for reporting this bug on the gpodder-devel mailing list

Sat, 22 Mar 2008 18:41:30 +0100 <thp@perli.net>
Fix "Podcasts not being marked as new when synced to iPod" (#70)

	* src/gpodder/sync.py: Fix bug when podcasts were not marked as new
	when synced to iPod and "on_sync_mark_played" was enabled;
	Bug URL: http://bugs.gpodder.org/show_bug.cgi?id=70
	Thanks to defrex (defrex0 gmail com) for report this bug in Bugzilla

Sat, 22 Mar 2008 10:39:55 +0100 <thp@perli.net>
Updated Russian and Czech translation

	* data/po/cs.po: Updated Czech translation from Ondrej Vesely
	* data/po/ru.po: Updated Russian translation from Leonid Ponomarev

Thu, 20 Mar 2008 15:00:29 +0100 <thp@perli.net>
Updated Swedish translation

	* data/po/sv.po: Updated Swedish translation from Anders Kvist

Thu, 20 Mar 2008 11:13:16 +0100 <thp@perli.net>
Fix bug with unneeded download directory being created

	* src/gpodder/libpodcasts.py: Fix bug when an unneeded download
	directory would be created on every gPodder startup

Thu, 20 Mar 2008 11:11:18 +0100 <thp@perli.net>
Only serialize DumbShelve to disk when we have changed/deleted items in it

	* src/gpodder/dumbshelve.py: Add a "__dirty" flag to DumbShelve to
	know if we have to write the DumbShelve to the disk or if nothing has
	changed since the last write (and therefore no need to run the
	time-consuming serialization code again); this speeds up initial
	loading time and probably also speeds up other parts of the code

Thu, 20 Mar 2008 11:07:48 +0100 <thp@perli.net>
Performance-improving patch from Nick (nikosapi) to html entity replacement

	* src/gpodder/util.py: Merge patch from Nick (nikosapi.org) to really